# csad2526KI407DenysKohut10

./: CMakeLists.txt  README.md  ai.txt  ci.bat  ci.sh
.github/workflows/: ci.yml
lab2/: UART.qpf  UART.qsf  baud_gen.v  uart_rx.v  uart_tb.v  uart_top.v  uart_tx.v
tests/: unit_tests.cpp
